2004-10-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configure, autoconf/utils.m4, doc/{C,ja_JP.eucJP}/readme.dl,
	  interface/Makefile.{am,in},interface/{dumb,ncurs,slang,motif,tk,
	  emacs,vt100,xaw,xskin,dynamic,mac,gtk,server,alsaseq,w32g,winsyn,
	  portmidisyn}_c.c, timidity/controls.h, timidity/timiidty.c:
	  Fix to fit with case-insensitive file system
	* interface/interface_[nsmkeTaigA].txt: remove
	* interface/if_{ncurses,slang,motif,tcltk,emacs,vt100,xaw,xskin,
	  gtk,alsaseq}.txt: add

2004-10-21  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/mod2midi.c (Voice_Play, Voice_SetPeriod):
	  improve the code path when period2note returns -1

2004-10-21  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c (period2note):
	  initialize *finetune when returning a bad period
	* timidity/mod2midi.c (load_module_samples):
	  samples without names were causing NULL pointer reads
	* timidity/mod2midi.c (period2note):
	  delete extra \n

2004-10-18  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* libunimod/mlutil.c (getAmigaPeriod): Avoid division by zero
	* timidity/mod2midi.c: Change all VERB_NORMAL and VERB_VERBOSE
	  messages to VERB_NOISY.

2004-10-17  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* libunimod/mloader.c (SL_LoadSamples): too many arguments to
	  function `FreeSampleList'
	* timidity/common.c, timidiyt/timidiyt.c: avoid confliction of
	  time.h and sys/time.h
	* timidity/aq.c: fix wrong prototype (int -> void)
	* timidity/wrd_read.c: #ifdef-out unknown pragma
	* configure.in, timidity/timidity.c: no need of <stdbool.h>
	* timidity/Makefile.am: bug fix

2004-10-14  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* interface/w32g_i.c (MPanelMessageHaveMesssage): fix typo
	* autoconf/alsa.m4, autoconf/ao.m4, autoconf/arts.m4,
	  autoconf/esd.m4, autoconf/gtk-2.0.m4, autoconf/gtk.m4,
	  autoconf/libFLAC.m4, autoconf/libOggFLAC.m4, autoconf/ogg.m4,
	  autoconf/utils.m4, autoconf/vorbis.m4: Fixes for the
	  underquoting problems in the M4 macros.
