@@ -1,3 +1,8 @@
+2004-11-03  Eric A. Welsh <ewelsh@ccb.wustl.edu>
+
+	* timidity/playmidi.c: fix to correctly handle non-linear velocity
+	  levels
+
 2004-10-27  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* configure, autoconf/utils.m4, doc/{C,ja_JP.eucJP}/readme.dl,
